<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.angrymuscrat.ya.geoloc.MenuActivity">

    <LinearLayout style="@style/LinearMenu"
        android:paddingLeft="20dp"
        android:paddingRight="10dp">
        <LinearLayout style="@style/LinearMenu">
            <Button style="@style/ButtonMenu"
                android:id="@+id/mode1"
                android:text="@string/general_game"
                />
        </LinearLayout>

        <LinearLayout style="@style/LinearMenu">
            <Button style="@style/ButtonMenu"
                android:id="@+id/mode2"
                android:text="@string/local_game"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/LinearMenu"
        android:paddingLeft="10dp"
        android:paddingRight="20dp">
        <LinearLayout style="@style/LinearMenu">
            <Button style="@style/ButtonMenu"
                android:id="@+id/mode3"
                android:text="@string/chosen_game"
            />
        </LinearLayout>

        <LinearLayout style="@style/LinearMenu">
            <Button style="@style/ButtonMenu"
                android:id="@+id/mode4"
                android:text="@string/interesting_game"
            />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
