<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
        <TextView style = "@style/Text"
            android:text="@string/select_the_number_of_rounds"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
        <EditText style = "@style/Text"
            android:id="@+id/chosenittext"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
        <TextView style = "@style/Text"
            android:text="@string/select_longedit"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
        <EditText style = "@style/Text"
            android:id="@+id/chosenEditLong"
            android:layout_width="match_parent"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearTwo">
        <TextView style = "@style/Text"
            android:text="@string/select_latitude"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearTwo">
        <EditText style = "@style/Text"
            android:id="@+id/chosenEditLatit"
            android:layout_width="match_parent"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearTwo"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">
        <Button style = "@style/ButtonMenu"
            android:id="@+id/chosenitbutton"
            android:text="@string/start_game"
            />
    </LinearLayout>

</LinearLayout>