<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/LinearOne">

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
        <TextView style = "@style/TextView"
            android:text="@string/select_the_number_of_rounds"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
        <EditText style = "@style/EditText"
            android:id="@+id/localedittext"
            android:inputType="numberDecimal"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
    <TextView style = "@style/TextView"
        android:id="@+id/localedLocation"
        />
    </LinearLayout>

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
        <TextView style = "@style/TextView"
            android:id="@+id/localedEnabled"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
        <TextView style = "@style/TextView"
            android:id="@+id/localedStatus"
            />
    </LinearLayout>

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
        <LinearLayout style = "@style/LinearOne"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">
            <Button style = "@style/ButtonMenu"
                android:id="@+id/localeditbutton"
                android:text="@string/start_game"
                />
        </LinearLayout>
        <LinearLayout style = "@style/LinearOne"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">
            <Button style = "@style/ButtonMenu"
                android:id="@+id/localedToSettings"
                android:text="@string/tosettings"
            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style = "@style/LinearParent"
        android:layout_weight="2">
    </LinearLayout>

</LinearLayout>